# oc-metrics

./: Cargo.toml  README.md  build.rs  release.sh
migrations/sqlite/: 20210320_AddMetricsTable.sql
proto/: logger.proto
src/: lib.rs  main.rs  server.rs
src/dal/: mod.rs  sqlite.rs
src/dal/migrator/: mod.rs  sqlite.rs
testdata/sqlite/: 0001_basic.sql
