[package]
name = "oc-metrics"
version = "0.1.0"
authors = ["Your Name <over.codes@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4"
prost = "0.7"
tonic-reflection = "0.1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4"
rust-embed="5.9.0"
rusqlite = { version = "0.24.2", features = ["bundled"] }
prost-types = "0.7.0"
log = "0.4"
env_logger = "0.8.3"

[build-dependencies]
tonic-build = "0.4"